--- a/src/main/resources/templates/myPage/sellList.html
+++ b/src/main/resources/templates/myPage/sellList.html
@@ -9,47 +9,50 @@
 </head>
 
 <div layout:fragment="content">
-<!--    <h1 class="text-center">판매내역</h1>-->
-    <div class="d-flex">
-        <span class="span" onclick="onSaleFunc()">판매중</span>
-        <span class="span" onclick="soldFunc()">판매완료</span>
-        <span class="span" onclick="hiddenFunc()">숨김</span>
-    </div>
+<section class="py-5">
+    <div class="container px-4 px-lg-5 my-5">
+        <div class="d-flex">
+            <span class="span" onclick="onSaleFunc()">판매중</span>
+            <span class="span" onclick="soldFunc()">판매완료</span>
+            <span class="span" onclick="hiddenFunc()">숨김</span>
+        </div>
 
-<section id="sec_onSale" class="py-5" >
-    <h2>판매중</h2>
-    <div class="container px-4 px-lg-5 mt-5">
-        <div th:if="${onSaleAndRsv.isEmpty()}"><p>판매중인 상품이 없습니다.</p></div>
-    <div class="row gx-4 gx-lg-5 row-cols-2 row-cols-md-3 row-cols-xl-4 justify-content-center">
-        <div class="col mb-6" th:unless="${onSaleAndRsv.isEmpty()}" th:each = "post:${onSaleAndRsv}">
-            <div class="card h-100" th:onclick="|location.href='@{|/post/detail/${post.postId}|}'|" style="cursor: pointer;">
-                <!-- 제품사진-->
-                <img class="card-img-top" th:src="|/post/firstImg/${post.postId}|" alt="제품사진" />
-                <!-- Product details-->
-                <div class="card-body p-3">
-                    <div class="text-center">
-                        <!-- 제목-->
-                        <h5 class="fw-bolder text-truncate" th:text="${post.title}">제목</h5>
-                        <!--지역, 시간-->
-                        <p class="fw-normal text-secondary">[[${post.loc.locName}]] ∙ [[${post.createdTime}]]</p>
-                        <!-- 가격-->
-                        <h6 class="fw-bolder" th:if="${post.price}!=0" th:text="|${post.price}원|">가격</h6>
-                        <!--예약중 배지-->
-                        <span class="badge bg-success" th:if="${post.sellState.getSellStateName().equals('예약중')}">예약중</span>
+        <section id="sec_onSale" class="py-5" >
+            <h2>판매중</h2>
+            <div class="container px-4 px-lg-5 mt-5">
+                <div th:if="${onSaleAndRsv.isEmpty()}"><p>판매중인 상품이 없습니다.</p></div>
+            <div class="row gx-4 gx-lg-5 row-cols-2 row-cols-md-3 row-cols-xl-4 justify-content-center">
+                <div class="col mb-6" th:unless="${onSaleAndRsv.isEmpty()}" th:each = "post:${onSaleAndRsv}">
+                    <div class="card h-100" th:onclick="|location.href='@{|/post/detail/${post.postId}|}'|" style="cursor: pointer;">
+                        <!-- 제품사진-->
+                        <img class="card-img-top" th:src="|/post/firstImg/${post.postId}|" alt="제품사진" />
+                        <!-- Product details-->
+                        <div class="card-body p-3">
+                            <div class="text-center">
+                                <!-- 제목-->
+                                <h5 class="fw-bolder text-truncate" th:text="${post.title}">제목</h5>
+                                <!--지역, 시간-->
+                                <p class="fw-normal text-secondary">[[${post.loc.locName}]] ∙ [[${post.createdTime}]]</p>
+                                <!-- 가격-->
+                                <h6 class="fw-bolder" th:if="${post.price}!=0" th:text="|${post.price}원|">가격</h6>
+                                <!--예약중 배지-->
+                                <span class="badge bg-success" th:if="${post.sellState.getSellStateName().equals('예약중')}">예약중</span>
+                            </div>
+                        </div>
                     </div>
+                    <div class="d-flex">
+                        <span class="span-inner" th:if="${post.sellState.getSellStateName().equals('판매중')}" th:onclick="sellState([[${post.postId}]],'예약중')">예약중으로 변경</span>
+                        <span class="span-inner" th:if="${post.sellState.getSellStateName().equals('판매중')}" th:onclick="sellState([[${post.postId}]],'판매완료')">판매완료</span>
+
+                        <span class="span-inner" th:if="${post.sellState.getSellStateName().equals('예약중')}" th:onclick="sellState([[${post.postId}]],'판매중')">판매중으로 변경</span>
+                        <span class="span-inner" th:if="${post.sellState.getSellStateName().equals('예약중')}" th:onclick="sellState([[${post.postId}]],'판매완료')">판매완료</span>
+                    </div>
+
                 </div>
             </div>
-            <div class="d-flex">
-                <span class="span-inner" th:if="${post.sellState.getSellStateName().equals('판매중')}" th:onclick="sellState([[${post.postId}]],'예약중')">예약중으로 변경</span>
-                <span class="span-inner" th:if="${post.sellState.getSellStateName().equals('판매중')}" th:onclick="sellState([[${post.postId}]],'판매완료')">판매완료</span>
-
-                <span class="span-inner" th:if="${post.sellState.getSellStateName().equals('예약중')}" th:onclick="sellState([[${post.postId}]],'판매중')">판매중으로 변경</span>
-                <span class="span-inner" th:if="${post.sellState.getSellStateName().equals('예약중')}" th:onclick="sellState([[${post.postId}]],'판매완료')">판매완료</span>
-            </div>
-
         </div>
+        </section>
     </div>
-</div>
 </section>
 
 
